--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-psycopg2 = "==2.7.7"
-django-heroku = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
